tests/reject/protectedMethod.emojic
🐇 🐟 🍇
  🔑 🐈 🆕 🍇🍉

  🔐 🐖 🙋 🍇
    😀 🔤I’m a fish.🔤
  🍉
🍉

🐇 🐡 🐟 🍇
  🔑 🐈 🆕 🍇 🐐 🆕 🍉

  🐖 🐹 🍇
    🙋 🐕
  🍉
🍉

🏁 🍇
  🍦 fish 🔷🐟🆕
  🙋 fish
🍉
